--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="login_username">User name</string>
     <string name="login_password">Password</string>
     <string name="btn_login">Login</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="enter_your_username">Enter your user name</string>
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
