--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,19 +7,28 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="enter_your_password">Enter your password</string>
     <string name="enter_your_username">Enter your user name</string>
-    <string name="go_back">Go back</string>
+    
 
     <!--    Errors    -->
     <string name="login_error">Login error, check user name or password</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_basic">BasicActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="empty_field_error">Input fields can\'t be empty</string>
+    <string name="registration_user_name_error">Please use A–Z,a–z, characters 3–20</string>
+    <string name="registration_password_error">Password must contain A–Z,a–z, characters 5–20</string>
+    <string name="registration_password_repeat_error">Password doesn\'t match</string>
+    <string name="registration_email_error">Email address not valid</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+
+
+    <string name="success_registration">Registration complete, please login</string>
+    
+    <string name="registration_form">Register new user</string>
+
+    <string name="user_name_hint">Enter your user name</string>
+    <string name="user_password_hint">Enter your password</string>
+    <string name="user_password_repeat_hint">Repeat your password</string>
+
+    <string name="user_email_hint">Enter email address</string>
+    <string name="register_submit">Submit</string>
+
 </resources>
