--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="enter_your_password">Enter your password</string>
     <string name="enter_your_username">Enter your user name</string>
-    
+
 
     <!--    Errors    -->
     <string name="login_error">Login error, check user name or password</string>
@@ -18,10 +18,8 @@
     <string name="registration_email_error">Email address not valid</string>
 
 
-
-
     <string name="success_registration">Registration complete, please login</string>
-    
+
     <string name="registration_form">Register new user</string>
 
     <string name="user_name_hint">Enter your user name</string>
@@ -30,5 +28,21 @@
 
     <string name="user_email_hint">Enter email address</string>
     <string name="register_submit">Submit</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
 </resources>
